--- a/PHASE-1/2. K8-Setup.md
+++ b/PHASE-1/2. K8-Setup.md
@@ -64,4 +64,9 @@ kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml
 ```bash
 kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.49.0/deploy/static/provider/baremetal/deploy.yaml
 ```
+**###Running Kubeaudit to scan the kubernetes cluster for any vulnerabilities**
 
+https://github.com/Shopify/kubeaudit/releases
+tar -xvzf kubeaudit_0.22.2_windows_amd64.tar.gz
+sudo mv kubeaudit /usr/local/bin
+kubeaudit all
